--- a/.env
+++ b/.env
@@ -6,4 +6,8 @@ MONGO_URL=mongodb+srv://rajeshwar:AYkQobTJbGWJVKKX@cluster0.4h7ujmk.mongodb.net/
 
 # Nodemailer Credentials
 EMAIL_ID=rsr45411@gmail.com
-EMAIL_PASSKEY=qvnwpgecmjyxflae
+EMAIL_PASSKEY=wqvewiqezdvawdkf
+
+HASH_SALT = 11
+
+ddmepdseckvkjlne
