--- a/.env
+++ b/.env
@@ -1,15 +1,1 @@
-AYkQobTJbGWJVKKX - password
-
-
-PORT =4040
-MONGO_URL=mongodb+srv://rajeshwar:AYkQobTJbGWJVKKX@cluster0.4h7ujmk.mongodb.net/
-
-# Nodemailer Credentials
-EMAIL_ID=rsr45411@gmail.com
-EMAIL_PASSKEY=wqvewiqezdvawdkf
-
-HASH_SALT = 11
-
-JWT_SECRET = "ddmepdseckvkjlne1532"
-
-ddmepdseckvkjlne
+kuch na hai idr..
